# grupo2

./: .gitignore  README.md  test.w
src/IDE/: .gitignore  BaseProjectV2.qmlproject  BaseProjectV2.qmlproject.user.409bc7d  CMakeLists.txt  electron-builder.yml  index.html  package-lock.json  package.json  qmlmodules  readme.md  tsconfig.json
src/IDE/build-content-Desktop_Qt_6_6_0_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
src/IDE/content/: App.qml  BackButton.qml  CMakeLists.txt  Home.qml
src/IDE/content/components/: CustomButton.qml  CustomButton.qml.autosave  CustomButton2.qml  NavBar.qml
src/IDE/content/listModels/: AvailableBlocksModel.qml  AvailableBlocksModel.qml.autosave  CodeBlockStoreModel.qml  PatientModel.qml  ProjectModel.qml
src/IDE/content/views/: AddPatientModal.qml  AddPatientModal.qml.autosave  AddProjectModal.qml  Code.qml  Home.qml  Login.qml  Login.qml.autosave  Login2.qml  Patients.qml  Projects.qml  Scene.qml  SceneBuilder.qml
src/IDE/imports/: CMakeLists.txt
src/IDE/imports/BaseProjectV2/: CMakeLists.txt  qmldir
src/IDE/public/db/: database.sqlite
src/IDE/resources/db/: database.sqlite
src/IDE/source/: main.tsx
src/IDE/source/routes/: router.tsx
src/IDE/src/: FileSaver.cpp  FileSaver.h  SourceProgram.cpp  SourceProgram.h  customtree.cpp  customtree.h  import_qml_plugins.h  main.cpp  main.ts  preload.ts
src/IDE/src/bridge/: Python.bridge.ts
src/IDE/src/main/: index.ts
src/IDE/src/preload/: index.d.ts  index.ts
src/IDE/src/renderer/: index.html
src/IDE/src/services/: Database.service.ts  Project.service.ts
(+184 files in other folders)
